1.3.2
    - Disabled IPv6
    - Added examples.rti.hello that talks to RTI Connext 5.1.0. 
    - Fixed reading of TypeObject and PropertyList parameters
    
1.3.1
    - FIX: Removed references to SampleFilter. ContentFilter is used instead.

1.3.0
    - OMG assigned vendorId 0x0121
    - Changes to quality of service is tracked and sent to remote entities 
      with SEDP.
    - typeName is stored in Entity, EntityFactory gets typeName parameter 
      in create methods
    - Content filter support. Readers can do reader side filtering and
      optionally inform writers of the filter setup.   
      Content filter class name 'java': jRTPS writers interprets filterExpression 
      as a fully qualified class name of java class, that implements ContentFilter
      interface, and tries to register this filter automatically when matched
      with reader.
      DDSSQL parsing is not implemented by jRTPS.

1.2.1
	- FIX: shared secret was not used :|
	- Config: udds.security.no-op.shared-secret This configuration is used 
	  if authentication is set to none, and rtps-protection is set to 
	  something other than none.
	  
1.2
    - Guid is created by AuthenticationPlugin. 
    - Renamed KeystoreAuthenticationPlugin to JKSAuthenticationPlugin
    - Security: Securing content with Transformers; MacTransformer, 
      CipherTransformer, CompositeTransformer

1.1
    - security: authentication & shared secret exchange
    
1.0.1
    - FIX: NPE when explicitly registering an instance. This does not affect 
      uDDS, as relevant API call is not public and not used by uDDS.
     
1.0
    - OWNERSHIP, OWNERSHIP_STRENGTH
    - Config: udds.sedp-delay 
    - FIX: BuiltinParticipantDataListener is registered after built-in 
      entities have been created. This fixes some timing issues on startup.
    - FIX: creating an entity returns an existing entity if it has been 
      created before with the same entityId.    
      
0.9.13
    - TIME_BASE_FILTER, LIFESPAN
    
0.9.12