@@ -58,8 +58,7 @@ udds.sedp-delay = 500
 # Authentication plugin name: jks, none
 udds.security.authentication = jks
 udds.security.no-op.shared-secret = some_random_string
-udds.security.rtps-protection = HmacSHA1
-
+udds.security.rtps-protection = AESHmacSHA1
 
 # Name of the keystore as a resource name
 udds.security.jks.keystore = /jrtps.jks
@@ -68,8 +67,6 @@ udds.security.jks.keystore.password = changeit
 # Alias of the CA. Used in signing of principals certificate.
 udds.security.jks.ca = jrtpsCA
 # Alias of the principal
-udds.security.jks.principal = jrtps03
+udds.security.jks.principal = jrtps01
 # Password of the principals private key
-udds.security.jks.principal.password = jrtps03
-
-###
+udds.security.jks.principal.password = jrtps01
